# tetris

./: .gitignore  CMakeLists.txt  flake.nix  flake.nix~  tetris.c  tetris.cpp
.direnv/: flake-profile
